--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node main.js"
   },
   "dependencies": {
+    "bower": "^1.8.0",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "coffee": "^3.3.0",
